# rofi-mode.rs

./: Cargo.toml  README.md
.cargo/: config.toml
dev/: Cargo.toml
dev/src/: main.rs
examples/basic/: Cargo.toml  README.md  run.sh
examples/basic/src/: lib.rs
examples/file-browser/: Cargo.toml  README.md  run.sh
examples/file-browser/src/: lib.rs
src/: api.rs  lib.rs  string.rs
