[package]
name = "rofi-mode"
version = "0.2.1"
edition = "2021"
rust-version = "1.60.0"
description = "High-level library for creating Rofi plugins and custom modes"
repository = "https://github.com/SabrinaJewson/rofi-mode.rs"
license = "MIT"
keywords = ["rofi", "mode", "plugin"]
categories = ["api-bindings"]

[dependencies]
bitflags = "1.3.2"
cairo-rs = "0.15.10"
libc = "0.2.122"
pango = "0.15.10"
rofi-plugin-sys = "0.1.0"

[workspace]
members = ["dev", "examples/basic"]
