[package]
name = "rofi-mode"
version = "0.2.4"
edition = "2021"
rust-version = "1.60.0"
description = "High-level library for creating Rofi plugins and custom modes"
repository = "https://github.com/SabrinaJewson/rofi-mode.rs"
license = "MIT"
keywords = ["rofi", "mode", "plugin"]
categories = ["api-bindings"]

[dependencies]
bitflags = "2.0.1"
cairo-rs = "0.17.0"
libc = "0.2.140"
pango = "0.17.4"
rofi-plugin-sys = "0.1.1"

[workspace]
members = ["dev", "examples/basic"]
