[package]
name = "rofi-mode"
version = "0.4.0"
edition = "2021"
rust-version = "1.60.0"
description = "High-level library for creating Rofi plugins and custom modes"
repository = "https://github.com/SabrinaJewson/rofi-mode.rs"
license = "MIT"
keywords = ["rofi", "mode", "plugin"]
categories = ["api-bindings"]

[dependencies]
bitflags = "2.2.1"
cairo-rs = "0.19.2"
libc = "0.2.142"
pango = "0.19.2"
rofi-plugin-sys = "0.4.0"

[workspace]
members = ["dev", "examples/*"]
